# Agent0

./: .dockerignore  Dockerfile  README.md  fly.toml
exa-scheduler/: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
exa-scheduler/.antigravity/: agents.yaml  settings.json
exa-scheduler/config/: secrets.example.yaml  settings.yaml
exa-scheduler/data/: calendar.json  reminders.json
exa-scheduler/data/memory_test/: chroma.sqlite3
exa-scheduler/docs/: ios_architecture.md
exa-scheduler/ios/ExaScheduler/: ExaSchedulerApp.swift
exa-scheduler/ios/ExaScheduler/Core/: AgentClient.swift  ChatViewModel.swift
exa-scheduler/ios/ExaScheduler/UI/: ChatView.swift  GlassmorphicCard.swift  ParticleBackgroundView.swift  VoiceInputView.swift
exa-scheduler/src/: main.py  server.py
exa-scheduler/src/config/: settings.py
exa-scheduler/src/core/: memory.py  orchestrator.py  planner.py  researcher.py
exa-scheduler/src/llm/: openai_client.py
exa-scheduler/src/prompts/: planning.md  system_prompt.md  tools.md
exa-scheduler/src/tools/: base.py  calendar.py  email.py  memory_tool.py  reminders.py
exa-scheduler/tests/: manual_check.py
exa-scheduler/tests/integration/: test_example.py
