[tool.poetry]
name = "exa-scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"          # Latest OpenAI client
pydantic = "^2.0.0"        # Type validation & schema generation
chromadb = "^0.4.0"        # Local vector memory
tenacity = "^8.0.0"        # Retry logic
python-dotenv = "^1.0.0"   # Environment variable management
fastapi = "^0.100.0"       # Web framework for API
uvicorn = "^0.23.0"        # ASGI server

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
